tests/snapshots/snapshots__command_palette_preserves_visual_selection_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
╭ FILTERS ───────────────╮╭ ▶▮◀ /tmp/tuxedo-snapshot.txt  •  15 t╮╭ DETAIL ────────────────────────╮
│                        ││                                      ││                                │
│ PROJECTS               ││ (2)  PRIORITY A  ────────────────────││ priority  (A)                  │
│   +work             4  ││  1 [x] ▸ (A) Finish Q2 board deck +wo││ created   2026-05-01           │
│   +health           3  ││  2 [x]   (A) Call dentist to reschedu││ due       2026-05-06  today    │
│   +finance          2  ││ (3)  PRIORITY B  ────────────────────││ projects  +work                │
│   +home           ┌ tuxedo · command ────────────────────────────────────────┐aptop              │
│   +learning       │ > █                                                      │                   │
│   +personal       │──────────────────────────────────────────────────────────│                   │
│   +travel         │ ▶ new task                                             n │                   │
│                   │   edit current task (normal mode)                      e │01 Finish Q2 board │
│ CONTEXTS          │   edit current task (insert mode)                      i │laptop             │
│   @errands        │   toggle complete                                      x │06                 │
│   @home           │   delete task                                         dd │                   │
│   @laptop         │   cycle priority                                       p │                   │
│   @phone          │   add project to current task                          + │                   │
│                   │   add or remove context on current task                c │                   │
│                   │   copy line to clipboard                              yy │                   │
│                   │   copy body to clipboard                              yb │                   │
│                   │   open task note                                       o │                   │
│                   │   create or open task note                             O │                   │
│                   │   undo                                                 u │                   │
│                   │   cursor down                                      j / ↓ │                   │
│                   │   cursor up                                        k / ↑ │                   │
│                   │  ↑↓ / Ctrl-N/P navigate · Enter run · Esc cancel         │                   │
│                   └──────────────────────────────────────────────────────────┘                   │
│                        ││                                      ││                                │
│                        ││                                      ││                                │
│                        ││                                      ││                                │
│                        ││                                      ││                                │
╰────────────────────────╯╰──────────────────────────────────────╯╰────────────────────────────────╯
 COMMAND   type to filter · Enter run · Esc canc15 open · 2 selected · 2026-05-06 · tuxedo 2026.7.1
